--- a/Web_Scraper_CMHOF.ipynb
+++ b/Web_Scraper_CMHOF.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3525d7d",
+   "id": "57607f37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "203911d7",
+   "id": "f79cd44e",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fed76504",
+   "id": "7696b3c1",
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "46897e66",
+   "id": "d1be2662",
    "metadata": {
     "scrolled": true
    },
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bcdc5118",
+   "id": "5c52ad77",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9fd78ced",
+   "id": "278c2fef",
    "metadata": {
     "scrolled": true
    },
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "222a2815",
+   "id": "fe49551e",
    "metadata": {
     "scrolled": true
    },
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ddeb31b2",
+   "id": "2674fec2",
    "metadata": {
     "scrolled": true
    },
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cc2cb229",
+   "id": "230de4ff",
    "metadata": {
     "scrolled": true
    },
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1f9791bb",
+   "id": "0bbe7283",
    "metadata": {
     "scrolled": false
    },
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1fa9ebb0",
+   "id": "d04b91c7",
    "metadata": {
     "scrolled": true
    },
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "49e09802",
+   "id": "ee96541a",
    "metadata": {
     "scrolled": true
    },
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "86cbd333",
+   "id": "cc88b502",
    "metadata": {
     "scrolled": false
    },
@@ -1577,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8a3ee493",
+   "id": "c77c0e93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ad419dfb",
+   "id": "6e4c0355",
    "metadata": {
     "scrolled": true
    },
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "38e1e0f4",
+   "id": "8a385d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "0f2823b0",
+   "id": "e155fe05",
    "metadata": {
     "scrolled": true
    },
@@ -1779,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "0437a4b8",
+   "id": "aafe0f8e",
    "metadata": {
     "scrolled": true
    },
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e44373d",
+   "id": "b59d9b18",
    "metadata": {},
    "source": [
     "**Bonus Question:"
@@ -1834,9 +1834,9 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "b15cbe5d",
+   "id": "b77ce88d",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1868,9 +1868,9 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "2d94a59a",
+   "id": "b1aa6f2d",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2518,7 +2518,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "5f5d467d",
+   "id": "9755292d",
    "metadata": {},
    "outputs": [
     {
@@ -2539,19 +2539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9edb7845",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup.find_all(lambda tag: tag.name == 'div' and \n",
-    "                                   tag.get('class') == ['vertical-card_content--title'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 229,
-   "id": "b0c62875",
+   "id": "ec16efcb",
    "metadata": {
     "collapsed": true
    },
@@ -2719,7 +2708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560e8ad9",
+   "id": "09909fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,7 +2718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cfdb183",
+   "id": "ecf74382",
    "metadata": {},
    "outputs": [],
    "source": [
